@@ -88,6 +88,7 @@ CONFIG_RT2880_MTD=y
 CONFIG_ETHMAC_TOOL=y
 CONFIG_RT2880_GPIO_TEST=y
 CONFIG_RALINKAPP_HWNAT=y
+# CONFIG_RALINKAPP_QDMA is not set
 # CONFIG_RALINKAPP_ATED is not set
 # CONFIG_RALINKAPP_HWNAT_AC is not set
 # CONFIG_RALINKAPP_HWNAT_ACL is not set
