@@ -1598,7 +1598,8 @@
 2) dropbear: up to 2015.71 version.<br>
 3) ethtool: up to 4.2 version.<br>
 4) irqbalance: update to 16.12.2015 git version.<br>
-5) kernel: ralink_raeth: switch to qdma for MT7621.<br>
+5) build_system: add qdma tool (need for hw_qos support in future).<br>
+6) kernel: ralink_raeth: switch to qdma for MT7621.<br>
 <br>
 <br>
 <br>
